fixed spacing and height

--- a/src/components/sass/About.scss
+++ b/src/components/sass/About.scss
@@ -6,6 +6,7 @@
     .wrapper {
        @include wrapper();
        text-align: center;
+       height: 100%;
     img {
         position: absolute;
         top: 0%;
@@ -20,7 +21,7 @@
         text-align: justify;
         font-size: 2.3vh;
         color: white;
-        max-width: 500px;
+        max-width: 800px;
         margin: 0 auto;
     }
 }
